# physix_visual

./: .gitignore  Open-Viewer.bat  README.md
converter/: CMakeLists.txt
converter/src/: coord.h  gltf_export.cpp  gltf_export.h  main.cpp  mesh_extract.cpp  mesh_extract.h  physx_app.cpp  physx_app.h  types.h
depot/: .p4ignore  P4DEPOT.md
docs/: 方案设计.md
runtime/: README.txt
scripts/: bootstrap.ps1  convert_and_view.ps1  deploy-to-tools.ps1  prepare-portable.ps1  start.ps1
tools/: analyze_bin.py
viewer/: index.html  package-lock.json  package.json  vite-plugin-physix.ts  vite.config.ts
viewer/scripts/: verify-browser.ts  verify-navigation.ts
viewer/src/: coords.ts  debug-hook.d.ts  display-mode.ts  main.ts  scene-origin.ts  style.css
